--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <audio controls autoplay>
-      <source src="assets/musik.mp3" type="audio/ogg" />
+      <source src="assets/musik.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
   </body>
